[package]
edition = "2021"
name = "transaction-consumer"
version = "0.18.0"

[dependencies]
anyhow = "1"
futures = "0.3"
log = { version = "0.4.14", optional = true }
rdkafka = { version = "0.36.2", features = ["gssapi", "sasl"] }
url = "2.2.2"
tokio = { version = "1.17", features = ["sync", "fs", "rt", "macros"] }
tracing = { version = "0.1.34", default-features = false, features = ["std", "attributes"] }
tracing-log = { version = "0.2.0", optional = true }
tracing-stackdriver = { version = "0.10.0", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"], optional = true }

nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

ton-block-compressor = { git = "https://github.com/broxus/ton-block-compressor" }
everscale-rpc-client = { git = "https://github.com/broxus/everscale-jrpc.git" }

[features]
default = ["log-compat"]
vendored = ["rdkafka/gssapi-vendored"]
log-compat = ["dep:log"]
tracing-init = ["dep:tracing-log", "dep:tracing-subscriber"]
stackdriver = ["tracing-init", "dep:tracing-stackdriver"]


[target.'cfg(target_os = "macos")'.dependencies.rdkafka]
features = ["gssapi-vendored", "sasl"]
version = "0.36.2"
